# sandbox-llmevals

./: .gitignore  benchmark_gsm8k_throughput.sh  benchmark_throughput.sh  dump_gsm8k_parquet_to_md.py  pyproject.toml  run_eval.sh  run_gsm8k.sh  run_web_ui.sh  start_lms_gsm8k_server.sh  start_lms_server.sh  stop_lms_server.sh
configs/models/: default.yaml
llmevals/: __init__.py  cli.py  config.py  parsing.py  runtime.py
llmevals/web/: __init__.py  adapters.py  app.py  index.html  manager.py  runner.py  schemas.py  store.py
tests/: test_adapters.py  test_config_discovery.py  test_runtime.py  test_store.py  test_web_api.py
